# MyoLink

./: README.md  plan.md  pyproject.toml  pytest.ini  requirements.txt  spider_myopod_settings.json
.github/workflows/: python-tests.yml
Docs/: README.md  advertising_data.md  hand_control_protocol.md  myopod_streaming_protocol.md
examples/: README.md  connect_hand.py  control_hand.py  control_hand_digits.py  discover_devices.py  graph_myopod.py  graph_single_myopod.py  monitor_hand_humidity.py  spider_myopod.py  stream_multiple_myopods.py  stream_myopod_basic.py
humidity_readings/: humidity_D7FA4E7A825EB1583547F204337E1845_20250529_103006.csv  humidity_D7FA4E7A825EB1583547F204337E1845_20250529_120032.csv  humidity_D7FA4E7A825EB1583547F204337E1845_20250529_155122.csv  humidity_D7FA4E7A825EB1583547F204337E1845_20250530_085102.csv  humidity_D7FA4E7A825EB1583547F204337E1845_20250602_095243.csv  humidity_D7FA4E7A825EB1583547F204337E1845_20250603_070528.csv  humidity_D7FA4E7A825EB1583547F204337E1845_20250603_081121.csv  humidity_D7FA4E7A825EB1583547F204337E1845_20250603_150421.csv  humidity_D7FA4E7A825EB1583547F204337E1845_20250604_063152.csv  sensor_data_7D061238A292FF433DBA4C42864AD8D2_20250604_082744.csv  sensor_data_7D061238A292FF433DBA4C42864AD8D2_20250604_082825.csv  sensor_data_D7FA4E7A825EB1583547F204337E1845_20250604_082910.csv
myolink/: __init__.py  core.py  discovery.py  myopod.py
myolink/device/: README.md  __init__.py  hand.py
tests/: test_hand_commands.py
